// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Icon /> snapshot should match snapshot 1`] = `
<Icon
  name="accessibility"
>
  <div
    aria-hidden="true"
    className="md-icon-wrapper md-icon-auto-scales md-icon-scales"
    role="img"
  >
    <svg
      aria-hidden="true"
      className=""
      data-autoscale={false}
      data-scale={32}
      data-test="accessibility"
      fill="currentColor"
      height="100%"
      style={Object {}}
      viewBox="0, 0, 32, 32"
      width="100%"
    />
  </div>
</Icon>
`;

exports[`<Icon /> snapshot should match snapshot with ariaLabel 1`] = `
<Icon
  ariaLabel="This participant is muted"
  name="draft-indicator-bold"
>
  <div
    aria-hidden="false"
    aria-label="This participant is muted"
    className="md-icon-wrapper md-icon-auto-scales md-icon-scales"
    role="img"
  >
    <svg
      aria-hidden="true"
      className=""
      data-autoscale={false}
      data-scale={32}
      data-test="draft-indicator-bold"
      fill="currentColor"
      height="100%"
      style={Object {}}
      viewBox="0, 0, 32, 32"
      width="100%"
    />
  </div>
</Icon>
`;

exports[`<Icon /> snapshot should match snapshot with autoScale set to 'true' 1`] = `
<Icon
  autoScale={true}
  name="accessibility"
>
  <div
    aria-hidden="true"
    className="md-icon-wrapper md-icon-auto-scales md-icon-scales"
    role="img"
  >
    <svg
      aria-hidden="true"
      className=""
      data-autoscale={true}
      data-scale={false}
      data-test="accessibility"
      fill="currentColor"
      height="100%"
      style={Object {}}
      viewBox="0, 0, 32, 32"
      width="100%"
    />
  </div>
</Icon>
`;

exports[`<Icon /> snapshot should match snapshot with autoScale set to a percentage value 1`] = `
<Icon
  autoScale={150}
  name="accessibility"
>
  <div
    aria-hidden="true"
    className="md-icon-wrapper md-icon-auto-scales md-icon-scales"
    role="img"
  >
    <svg
      aria-hidden="true"
      className=""
      data-autoscale={150}
      data-scale={false}
      data-test="accessibility"
      fill="currentColor"
      height="100%"
      style={Object {}}
      viewBox="0, 0, 32, 32"
      width="100%"
    />
  </div>
</Icon>
`;

exports[`<Icon /> snapshot should match snapshot with className 1`] = `
<Icon
  className="example-class"
  name="accessibility"
>
  <div
    aria-hidden="true"
    className="md-icon-wrapper md-icon-auto-scales md-icon-scales example-class"
    role="img"
  >
    <svg
      aria-hidden="true"
      className=""
      data-autoscale={false}
      data-scale={32}
      data-test="accessibility"
      fill="currentColor"
      height="100%"
      style={Object {}}
      viewBox="0, 0, 32, 32"
      width="100%"
    />
  </div>
</Icon>
`;

exports[`<Icon /> snapshot should match snapshot with color 1`] = `
<Icon
  color="red"
  name="accessibility"
>
  <div
    aria-hidden="true"
    className="md-icon-wrapper md-icon-auto-scales md-icon-scales"
    role="img"
  >
    <svg
      aria-hidden="true"
      className=""
      data-autoscale={false}
      data-scale={32}
      data-test="accessibility"
      height="100%"
      style={
        Object {
          "fill": "red",
          "stroke": "red",
        }
      }
      viewBox="0, 0, 32, 32"
      width="100%"
    />
  </div>
</Icon>
`;

exports[`<Icon /> snapshot should match snapshot with fillColor 1`] = `
<Icon
  fillColor="red"
  name="accessibility"
>
  <div
    aria-hidden="true"
    className="md-icon-wrapper md-icon-auto-scales md-icon-scales"
    role="img"
  >
    <svg
      aria-hidden="true"
      className=""
      data-autoscale={false}
      data-scale={32}
      data-test="accessibility"
      height="100%"
      style={
        Object {
          "fill": "red",
        }
      }
      viewBox="0, 0, 32, 32"
      width="100%"
    />
  </div>
</Icon>
`;

exports[`<Icon /> snapshot should match snapshot with id 1`] = `
<Icon
  id="example-id"
  name="accessibility"
>
  <div
    aria-hidden="true"
    className="md-icon-wrapper md-icon-auto-scales md-icon-scales"
    id="example-id"
    role="img"
  >
    <svg
      aria-hidden="true"
      className=""
      data-autoscale={false}
      data-scale={32}
      data-test="accessibility"
      fill="currentColor"
      height="100%"
      style={Object {}}
      viewBox="0, 0, 32, 32"
      width="100%"
    />
  </div>
</Icon>
`;

exports[`<Icon /> snapshot should match snapshot with invalid name 1`] = `
<Icon
  name="invalid_icon_name"
>
  <div
    className="md-icon-wrapper"
  >
    <div
      className="md-icon-not-found"
      data-autoscale={false}
      data-scale={32}
    >
      ⃞
    </div>
  </div>
</Icon>
`;

exports[`<Icon /> snapshot should match snapshot with scale 1`] = `
<Icon
  name="accessibility"
  scale={16}
>
  <div
    aria-hidden="true"
    className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
    role="img"
  >
    <svg
      aria-hidden="true"
      className=""
      data-autoscale={false}
      data-scale={16}
      data-test="accessibility"
      fill="currentColor"
      height="100%"
      style={Object {}}
      viewBox="0, 0, 32, 32"
      width="100%"
    />
  </div>
</Icon>
`;

exports[`<Icon /> snapshot should match snapshot with small icons 1`] = `
<Icon
  name="info-badge"
  scale={14}
>
  <div
    aria-hidden="true"
    className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
    role="img"
  >
    <svg
      aria-hidden="true"
      className=""
      data-autoscale={false}
      data-scale={14}
      data-test="info-badge"
      fill="currentColor"
      height="100%"
      style={Object {}}
      viewBox="0, 0, 14, 14"
      width="100%"
    />
  </div>
</Icon>
`;

exports[`<Icon /> snapshot should match snapshot with strokeColor 1`] = `
<Icon
  name="accessibility"
  strokeColor="red"
>
  <div
    aria-hidden="true"
    className="md-icon-wrapper md-icon-auto-scales md-icon-scales"
    role="img"
  >
    <svg
      aria-hidden="true"
      className=""
      data-autoscale={false}
      data-scale={32}
      data-test="accessibility"
      fill="currentColor"
      height="100%"
      style={
        Object {
          "stroke": "red",
        }
      }
      viewBox="0, 0, 32, 32"
      width="100%"
    />
  </div>
</Icon>
`;

exports[`<Icon /> snapshot should match snapshot with style 1`] = `
<Icon
  name="accessibility"
  style={
    Object {
      "color": "pink",
    }
  }
>
  <div
    aria-hidden="true"
    className="md-icon-wrapper md-icon-auto-scales md-icon-scales"
    role="img"
    style={
      Object {
        "color": "pink",
      }
    }
  >
    <svg
      aria-hidden="true"
      className=""
      data-autoscale={false}
      data-scale={32}
      data-test="accessibility"
      fill="currentColor"
      height="100%"
      style={Object {}}
      viewBox="0, 0, 32, 32"
      width="100%"
    />
  </div>
</Icon>
`;

exports[`<Icon /> snapshot should match snapshot with title 1`] = `
<Icon
  name="draft-indicator-bold"
  title="You have a draft message"
>
  <div
    aria-hidden="false"
    aria-label="You have a draft message"
    className="md-icon-wrapper md-icon-auto-scales md-icon-scales"
    role="img"
    title="You have a draft message"
  >
    <svg
      aria-hidden="true"
      className=""
      data-autoscale={false}
      data-scale={32}
      data-test="draft-indicator-bold"
      fill="currentColor"
      height="100%"
      style={Object {}}
      viewBox="0, 0, 32, 32"
      width="100%"
    />
  </div>
</Icon>
`;

exports[`<Icon /> snapshot should match snapshot with weight 1`] = `
<Icon
  name="accessibility"
  weight="light"
>
  <div
    aria-hidden="true"
    className="md-icon-wrapper md-icon-auto-scales md-icon-scales"
    role="img"
  >
    <svg
      aria-hidden="true"
      className=""
      data-autoscale={false}
      data-scale={32}
      data-test="accessibility"
      fill="currentColor"
      height="100%"
      style={Object {}}
      viewBox="0, 0, 32, 32"
      width="100%"
    />
  </div>
</Icon>
`;
